@@ -1,3 +1,6 @@
+2/10/17
+  Fix for popped windows not unmapping with client_to_desktop()
+
 13/8/17
   Fix for windows from first desktop being mapped when update_config
    is run
